fixed notification and video call api
